# wled-cli

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  context.rs  error.rs  main.rs
src/api/: endpoints.rs  mod.rs
src/api/eff/: effects.rs  mod.rs
src/api/pal/: mod.rs  palettes.rs
src/api/response/: mod.rs
src/api/state/: mod.rs  power.rs  segment.rs
src/cli/: cli.rs  context.rs  mod.rs
src/cli/commands/: brightness.rs  effects.rs  palettes.rs  power.rs
src/client/: brightness.rs  effects.rs  mod.rs  palettes.rs  power.rs  state.rs
src/commands/: brightness.rs  effects.rs  mod.rs  palettes.rs  power.rs
